fix mixin: scrollbar

--- a/mixin.css
+++ b/mixin.css
@@ -36,22 +36,22 @@
 }
 
 @define-mixin scrollbar {
-  &::-webkit-scrollbar {
+  ::-webkit-scrollbar {
     width: 6px;
     background: rgba(0, 0, 0, 0);
     border-radius: 100px;
   }
 
-  &::-webkit-scrollbar:hover {
+  ::-webkit-scrollbar:hover {
     background: rgba(0, 0, 0, 0.09);
   }
 
-  &::-webkit-scrollbar-thumb:vertical {
+  ::-webkit-scrollbar-thumb:vertical {
     background: rgba(0, 0, 0, 0.5);
     border-radius: 100px;
   }
 
-  &::-webkit-scrollbar-thumb:vertical:active {
+  ::-webkit-scrollbar-thumb:vertical:active {
     background: rgba(0, 0, 0, 0.61);
     border-radius: 100px;
   }
